<resources>
    <string name="app_name">SeniorBetterLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="hintName">Imie</string>
    <string name="hintSurname">Surname</string>
    <string name="hintWiek">Wiek</string>
    <string name="radioBtnMen">Mężczyzna</string>
    <string name="radioBtnWoman">Kobieta</string>
    <string name="hintPhoneNumber">Numer telefonu</string>
    <string name="textSave">Zapisz Dane</string>
    <string name="tvUserData">Dane Użytkownika:</string>
    <string name="title_activity_pedometer">PedometerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="countOfSteps">Liczba kroków</string>
    <string name="achievedDistance">Pokonany dystans:</string>
    <string name="burned_calories">Spalone kalorie</string>
    <string name="daily_progress">Dzienny postęp</string>
    <string name="history_of_steps">Historia aktywności:</string>
    <string name="find_help">Znajdź Pomoc</string>
    <string name="tvVolunteer">Wolontariusz</string>
    <string name="tvSenior">Senior</string>
    <string name="drug_name_hint">Nazwa leku</string>
    <string name="next_btn">Dalej</string>
    <string name="tv_frequency_dose">Jak często bierzesz lek?</string>
    <string name="tvFrequency">Częstotliwość</string>
    <string name="tvScheduleDescription">Poniżej ustaw godziny powiadomień dla wybranego leku</string>
    <string name="btnAccept">Zaakceptuj</string>
    <string name="tvNumberOfDose">Number of dose</string>
    <string name="tvHour">Godzina</string>
    <string name="tvDoseCount">Dawka</string>
    <string name="tvFrequencyDescription">Wybrana częstotliwość</string>
</resources>