<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutSchedule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNumberOfDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvNumberOfDose"
        android:textColor="#212C8A"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvHourOfTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNumberOfDose"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/tvHour"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSetHour"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNumberOfDose"
        android:layout_alignBaseline="@id/tvHourOfTake"
        android:layout_alignEnd="@id/tvNumberOfDose"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="00:00"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDoseCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHourOfTake"
        android:layout_marginTop="10dp"
        android:hint="@string/tvDoseCount"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerDoseCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/tvNumberOfDose"
        android:layout_alignBottom="@id/verticalLineItem"
         />

    <View
        android:id="@+id/verticalLineItem"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tvDoseCount"
        android:background="@color/black" />


</RelativeLayout>