<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.senior.pedometer.PedometerActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/horizontalLine"
            android:gravity="center"
            android:text="@string/daily_progress"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvProgress"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/horizontalLine" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="#000000"/>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/horizontalLine"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvNumberOfSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/countOfSteps"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCountOfSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumberOfSteps"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:hint="HINT COUNT OF STEPS"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCountOfSteps"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/achievedDistance"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAchievedDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDistance"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:hint="Distance"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAchievedDistance"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/burned_calories"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBurnedCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCalories"
                android:layout_marginTop="-1dp"
                android:gravity="center"
                android:hint="HINT BURNED CALORIES"
                android:textSize="20sp" />


        </RelativeLayout>


    </RelativeLayout>

    <View
        android:id="@+id/verticalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvHistoryOfSteps"/>

    <TextView
        android:id="@+id/tvHistoryOfSteps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/history_of_steps"
        app:layout_constraintTop_toBottomOf="@id/verticalLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryOfSteps"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>