<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.senior.pillReminder.ScheduleDrugFragment">

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/relativeLayoutDrug"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivPills"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/medicine" />

        <TextView
            android:id="@+id/tvDrugName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/ivPills"
            android:hint="Nazwa"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWayOfDose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDrugName"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/ivPills"
            android:hint="Rodzaj podania"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:id="@+id/verticalLineDrug"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/relativeLayoutDrug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSchedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Harmonogram"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/verticalLineDrug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tvScheduleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvScheduleDescription"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tvSchedule"
        app:layout_constraintStart_toStartOf="@id/tvSchedule"/>

    <TextView
        android:id="@+id/tvFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFrequency"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvScheduleDescription"
        app:layout_constraintStart_toStartOf="@id/tvSchedule"/>

    <TextView
        android:id="@+id/tvFrequencyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tvFrequencyDescription"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tvFrequency"
        app:layout_constraintStart_toStartOf="@id/tvSchedule"/>

    <View
        android:id="@+id/verticalLineDrug2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvFrequencyDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drugDoseRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/verticalLineDrug2"
        app:layout_constraintBottom_toTopOf="@id/btnFinish"
        app:layout_constraintStart_toStartOf="@id/tvSchedule"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_recyclerview_pill_schedule"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAccept"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>